# intervention-generalization

./: .gitignore  LICENSE  README.md  pyproject.toml  test_distributions.py
intervention_generalization/: __main__.py  convergence_experiment.py  data_ratio_experiment.py
intervention_generalization/data_generator/: __init__.py  distribution_utils.py  linear.py  polynomial.py  scm.py
intervention_generalization/model/: __init__.py  polynomial.py
intervention_generalization/utils/: __init__.py  experiment.py  plotting.py  utils.py
